# lhf

./: .cproject  .gitignore  .project  CMakeLists.txt  Doxyfile  LHFWrapper.py  LHF_8hpp_source.html  LICENSE  Makefile.am  README.md  annotated.html  argParser_8hpp_source.html  basePipe_8hpp_source.html  classLHF-members.html  classLHF.html  classargParser-members.html  classargParser.html  classbasePipe-members.html  classbasePipe.html  classbasePipe__coll__graph.dot  classbasePipe__coll__graph.md5  classbasePipe__inherit__graph.dot  classbasePipe__inherit__graph.md5  classbinomialTable-members.html  classbinomialTable.html  classdbscan-members.html  classdbscan.html  classdenStream-members.html  classdenStream.html  classdenStream__coll__graph.dot  classdenStream__coll__graph.md5  classdenStream__inherit__graph.dot  classdenStream__inherit__graph.md5  classdistMatrixPipe-members.html  classdistMatrixPipe.html  classdistMatrixPipe__coll__graph.dot  classdistMatrixPipe__coll__graph.md5  classdistMatrixPipe__inherit__graph.dot  classdistMatrixPipe__inherit__graph.md5  classes.html  (+205 more)
.github/workflows/: build.yml  ccpp.yml  pyLHF_build.yml  release.yml
Complex/: CMakeLists.txt  CTestTestfile.cmake  Makefile  alphaComplex.cpp  alphaComplex.hpp  betaComplex.cpp  betaComplex.hpp  cmake_install.cmake  indSimplexTree.cpp  indSimplexTree.hpp  main.cpp  polytopalcomplex.cpp  polytopalcomplex.hpp  simplexArrayList.cpp  simplexArrayList.hpp  simplexBase.cpp  simplexBase.hpp  simplexTree.cpp  simplexTree.hpp  witnessComplex.cpp  witnessComplex.hpp
Data_Structure_SP/: 16dsphere.txt  circles.py  d_way_space_partioning.cpp  d_way_space_partioning.h  d_way_space_partitioning.cpp  d_way_space_partitioning.hpp  dwaypartioning.py  polytoptohyperplane.py  teratope500.txt
LHF/: CMakeLists.txt  main.cpp
LHFmain/: .LHF.cpp.swp  .main.cpp.swo  .main.cpp.swp  .nfs0000000003120496000005d2  .nfs0000000003120497000005d7  .nfs000000000312049a00000600  .nfs000000000312049b000005cc  .nfs000000000312049c00000604  .nfs000000000312049e000005cf  .nfs00000000031204a000000607  .nfs00000000031204a3000005d0  .nfs00000000031204a40000068a  .nfs00000000031204a60000060a  .nfs00000000031204a80000060e  .nfs00000000031204aa00000612  .nfs00000000031204ad0000060f  .nfs00000000031204ae0000068f  .nfs00000000031204b000000692  .nfs00000000031204b300000695  .nfs00000000031204b500000698  .nfs00000000031204b600000693  .nfs00000000031204b70000069b  10-1.csv  10-2.csv  101024column.csv  1010250.csv  1010new.csv  1010newmix.csv  CMakeLists.txt  CTestTestfile.cmake  Class.py  GesturePebbleZ1_TEST.csv  GesturePebbleZ1_TESTCUT.csv  GesturePebbleZ1_TRAIN.csv  GesturePebbleZ1_TRAINnew.csv  GesturePebbleZ1_TRAINnew2.csv  GesturePebbleZ1_TRAINnew3.csv  GesturePebbleZ1_TRAINnew4.csv  GunPointAgeSpan_TEST.csv  LHF  (+11 more)
Pipes/: .distBuildSCExecutePH.hpp61,.swp  .fastPersistence.cpp.swp  Algorithm.md  CMakeLists.txt  CTestTestfile.cmake  Makefile  basePipe.cpp  basePipe.hpp  betaSkeletonBasedComplex.cpp  betaSkeletonBasedComplex.hpp  betaSubSkeletonComplex.cpp  betaSubSkeletonComplex.hpp  bettiPipe.cpp  bettiPipe.hpp  boundaryPipe.cpp  boundaryPipe.hpp  cmake_install.cmake  delaunayPipe.cpp  delaunayPipe.hpp  distBuildSCExecutePH.cpp  distBuildSCExecutePH.hpp  distMatrixPipe.cpp  distMatrixPipe.hpp  enumerateUVSC.cpp  enumerateUVSC.hpp  fastPersistence.cpp  fastPersistence.hpp  helixDistPipe.cpp  helixDistPipe.hpp  helixPipe.cpp  helixPipe.hpp  incrementalPersistence.cpp  incrementalPersistence.hpp  incrementalPipe.cpp  incrementalPipe.hpp  interpolateMerge.cpp  interpolatemerge.cpp  interpolatemerge.hpp  involutedPersistence.cpp  involutedPersistence.hpp  (+24 more)
Preprocessing/: CMakeLists.txt  cluster.cpp  cluster.hpp  coresetUtils.hpp  dbscan.cpp  dbscan.hpp  denStream.cpp  denStream.hpp  densityUtils.cpp  densityUtils.hpp  kMeansPlusPlus.cpp  kMeansPlusPlus.hpp  kdTree.cpp  kdTree.hpp  kdtree.cpp  kdtree.hpp  preprocessor.cpp  preprocessor.hpp  streamingKmeans.cpp  streamingKmeans.hpp  streamingUtils.cpp  streamingUtils.hpp  streamingkMeans.cpp  streamingkMeans.hpp
SimplicialFolding_Python/: FilteredFoldedComplex.py
Utils/: .writeOutput.hpp.swp  CMakeLists.txt  argParser.cpp  argParser.hpp  cluster.cpp  cluster.hpp  fileops.hpp  multifileops.cpp  multifileops.hpp  readInput.cpp  readInput.hpp  unionFind.cpp  unionFind.hpp  utils.cpp  utils.hpp  writeOutput.cpp  writeOutput.hpp
abstraction/: slidingWindow.cpp
cmake_tests/: CMakeLists.txt  PHTest.sh  complexTests.cpp  pipeTests.cpp  preprocTests.cpp  readTests.cpp  testExample.cpp  writeTests.cpp
cmake_tests/TestData/: 50_Points.csv  50_Points_DistMatrix.csv  50_Points_NeighGraph.csv
pyLHF/: Dockerfile  script.sh
pyLHF/src/: PKG-INFO  README.md  setup.py
python_tests/: README.md  generateDataLinks.sh
python_tests/Accuracy/: runAccuracy.py  runGroundTruths.py  runMultiBatch.sh
python_tests/DataScripts/: dataPlots.py  runMultiBatch.sh  scaleColumns.py  tadasetsgen.py  tdaPlots.py
python_tests/Polytopal_Development/: Checbyshev_Centers.py  ConvexHullofdspheresbasedCD.py  FinalPolytopalImplementation.py  PCA.py  cd.py  hypercubesphere.py  lungDataReduced10000.txt  polytopaltree.py  (+5 more)
search/: all_0.js  all_1.js  all_11.js  all_2.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  functions_1.js  functions_2.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js
src/: Makefile.am  argParser.cpp  argParser.hpp  basePipe.cpp  basePipe.hpp  bettiPipe.cpp  distMatrixPipe.cpp  distMatrixPipe.hpp  main.cpp  neighGraphPipe.cpp  neighGraphPipe.hpp  pipePacket.cpp  pipePacket.hpp  readInput.cpp  readInput.hpp  ripsPipe.cpp  simplexArrayList.cpp  simplexArrayList.hpp  simplexBase.cpp  simplexBase.hpp  simplexTree.cpp  simplexTree.hpp  testData.csv  utils.cpp  utils.hpp  writeOutput.cpp  writeOutput.hpp
src/.deps/: main.Po  readInput.Plo
test/: Makefile  Makefile.in  testExample.cpp  test_functions
(+38 files in other folders)
